# cli-todo

./: .gitignore  CMakeLists.txt  README.md
include/cli-todo/: item.hpp  sqlHandler.hpp
src/: item.cpp  main.cpp  sqlHandler.cpp
